--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -97,15 +97,16 @@
             </div>
         </div>
         <br />
-        @*cajas de seleccion*@
-        <div class="form-group">
+
+        @*<div class="form-group">
             <label class="control-label col-md-2">* Lider:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.lider, new { htmlAttributes = new { @class = "form-control", placeholder = "Numero de cedula" } })
-                @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
+            <div class="col-md-10" style="padding-top:0.5em;">
+                @foreach (var noLider in Model. )
+                @Html.DropDownListFor(model => model.proyecto.lider , new[] { new SelectListItem() { Text = "Administrador", Value = "1" }, new SelectListItem() { Text = "Desarrollador", Value = "2" }, new SelectListItem() { Text = "Usuario", Value = "3" } }, "--Rol no asignado--", new { @class = "form-control" })
             </div>
-        </div>
-@*
+        </div>*@
+
+        @*cajas de seleccion*@
     <div class="control-label"style="display:none">
         @Html.CustomLabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label col-md-2" })
         @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
@@ -133,21 +134,21 @@
             <div>
                 <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
 
-                    Aqui se insertan los usuarios*@
+                    @*Aqui se insertan los usuarios*@
                         
-                       @* @foreach (var item in Model.listaUsuarios)
-    {
-        var ced = item.cedula;
-        <option value=@ced>
-            @Html.DisplayFor(modelItem => item.nombre)
-            @Html.DisplayFor(modelItem => item.apellidos)
-            @Html.Raw(" ")
-        </option>
-    }
+                       @foreach (var item in Model.listaUsuarios)
+                        {
+                            var ced = item.cedula;
+                            <option value=@ced>
+                                @Html.DisplayFor(modelItem => item.nombre)
+                                @Html.DisplayFor(modelItem => item.apellidos)
+                                @Html.Raw(" ")
+                            </option>
+                        }
                     </select>
                 </div>
             </div>
-        </div>*@
+        </div>
         @*Fin cajas de seleccion*@
         <div class="form-group">
             <div class=" col-md-8">
