--- a/ProyectoInge1/ProyectoInge1/Views/Gestion/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Gestion/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@model ProyectoInge1.Models.ModGestionInter
+﻿@model ProyectoInge1.Models.ModGestionCambios
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <h2>Index</h2>
 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+}
