interfaz index Hist Versiones

--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
@@ -53,7 +53,7 @@
                 <br /><br /><br />
                 @*nombre*@
                 <div class="form-group">
-                    <label class="control-label col-md-2">Nombre:</label>
+                    <label class="control-label col-md-2">Proyecto:(No editable)</label>
                     <div class="col-md-10">
                      
                     </div>
@@ -61,14 +61,14 @@
                 <br /><br />
                 @*Descripcion*@
                 <div class="form-group">
-                    <label class="control-label col-md-2">Descripcion:</label>
+                    <label class="control-label col-md-2">Nombre del requerimiento:(No editable)</label>
                     <div class="col-md-10">
                         
                     </div>
                 </div>
                 <br /><br />
                 <div class="form-group">
-                    <label class="control-label col-md-2">* Fecha de Inicio:</label>
+                    <label class="control-label col-md-2">Version del requerimiento:(No editable)</label>
                     <div class="col-md-10">
                         
                     </div>
@@ -82,14 +82,14 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-md-2">* Estado:</label>
+                    <label class="control-label col-md-2">Interesado por el cambio:(Tal vez editable)</label>
                     <div class="col-md-10" style="padding-top:0.5em;">
                        
                     </div>
                 </div>
                 <br /><br /><br /><br />
                 <div class="form-group">
-                    <label class="control-label col-md-2">Lider:</label>
+                    <label class="control-label col-md-2">Razon de la solicitud:(editable)</label>
                     <div class="col-md-10">
                    
                     </div>
